# aip_labs

./: .env  README.md  docker-compose.yml
backend/: config.py  db.py  logger.py  main.py  models.py  pyproject.toml
backend/dao/: action_dao.py  coupon_dao.py
backend/handlers/: action_handler.py  coupon_handler.py
backend/helper_tool/: add_coupons_and_anctions_to_db.py
backend/tests/: action_tests.py  conftest.py  coupon_tests.py
